--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-on-rails": "^10.1.4"
+    "react-on-rails": "^10.1.4",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
