--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.4",
+    "@types/react": "^16.3.12",
+    "@types/react-dom": "^16.0.5",
     "babel-preset-react": "^6.24.1",
     "history": "^4.7.2",
     "prop-types": "^15.6.1",
@@ -13,7 +15,9 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^4.0.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "ts-loader": "3.5.0",
+    "typescript": "^2.8.3"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
