--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
+    "styled-components": "^3.2.6",
     "ts-loader": "3.5.0",
     "typescript": "^2.8.3"
   },
