--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react-redux": "^5.0.16",
     "babel-preset-react": "^6.24.1",
     "history": "^4.7.2",
+    "lodash": "^4.17.10",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
