--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "recompose": "^0.27.0",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "styled-components": "^3.2.6",
     "ts-loader": "3.5.0",
     "typescript": "^2.8.3"
