--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
+    "react-virtualized": "^9.18.5",
     "recompose": "^0.27.0",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
