--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "recompose": "^0.27.0",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
+    "redux-observable": "^0.18.0",
     "redux-thunk": "^2.2.0",
+    "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.0.0",
     "styled-components": "^3.2.6",
     "ts-loader": "3.5.0",
     "typescript": "^2.8.3"
