--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "campfire",
   "private": true,
+  "scripts": {
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
+  },
   "dependencies": {
     "@rails/webpacker": "3.4",
     "@types/react": "^16.3.12",
@@ -29,6 +33,12 @@
     "typescript": "^2.8.3"
   },
   "devDependencies": {
-    "webpack-dev-server": "2.11.2"
+    "@storybook/react": "^3.4.3",
+    "webpack-dev-server": "2.11.2",
+    "@storybook/addon-actions": "^3.4.3",
+    "@storybook/addon-links": "^3.4.3",
+    "@storybook/addons": "^3.4.3",
+    "babel-core": "^6.26.3",
+    "babel-runtime": "^6.26.0"
   }
 }
