--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-react": "^6.24.1",
     "history": "^4.7.2",
     "lodash": "^4.17.10",
+    "moment": "^2.22.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
