--- a/package.json
+++ b/package.json
@@ -42,7 +42,13 @@
     "@storybook/addons": "^3.4.3",
     "@storybook/react": "^3.4.3",
     "babel-core": "^6.26.3",
+    "babel-jest": "^22.4.4",
     "babel-runtime": "^6.26.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.4",
+    "jest": "^22.4.4",
+    "react-test-renderer": "^16.3.2",
     "webpack-dev-server": "2.11.2"
   }
 }
