--- a/package.json
+++ b/package.json
@@ -2,14 +2,25 @@
   "name": "campfire",
   "private": true,
   "jest": {
-    "roots": ["<rootDir>/app/javascript/"],
+    "roots": [
+      "<rootDir>/app/javascript/"
+    ],
     "setupTestFrameworkScriptFile": "<rootDir>/app/javascript/__tests__/setup/setup_enzyme.ts",
-    "testPathIgnorePatterns": ["<rootDir>/app/javascript/__tests__/setup/"],
+    "testPathIgnorePatterns": [
+      "<rootDir>/app/javascript/__tests__/setup/"
+    ],
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     },
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
-    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"]
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
@@ -60,8 +71,10 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
+    "isomorphic-fetch": "^2.2.1",
     "jest": "^22.4.4",
     "react-test-renderer": "^16.3.2",
+    "redux-mock-store": "^1.5.1",
     "ts-jest": "^22.4.6",
     "webpack-dev-server": "2.11.2"
   }
