--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
-    "isomorphic-fetch": "^2.2.1",
+    "fetch-mock": "^6.4.2",
     "jest": "^22.4.4",
     "react-test-renderer": "^16.3.2",
     "redux-mock-store": "^1.5.1",
