--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "scripts": {
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
+    "lint:css": "stylelint './app/javascript/components/**/*.tsx'",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -75,6 +76,11 @@
     "jest": "^22.4.4",
     "react-test-renderer": "^16.3.2",
     "redux-mock-store": "^1.5.1",
+    "stylelint": "^9.2.1",
+    "stylelint-config-recommended": "^2.1.0",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.3.1",
     "ts-jest": "^22.4.6",
     "webpack-dev-server": "2.11.2"
   }
