--- a/package.json
+++ b/package.json
@@ -2,17 +2,30 @@
   "name": "campfire",
   "private": true,
   "jest": {
-    "roots": ["<rootDir>/app/javascript/"],
+    "roots": [
+      "<rootDir>/app/javascript/"
+    ],
     "setupTestFrameworkScriptFile": "<rootDir>/app/javascript/__tests__/setup/setup_enzyme.ts",
-    "testPathIgnorePatterns": ["<rootDir>/app/javascript/__tests__/setup/"],
+    "testPathIgnorePatterns": [
+      "<rootDir>/app/javascript/__tests__/setup/"
+    ],
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     },
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
-    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"]
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   },
   "lint-staged": {
-    "*.{css,scss,tsx}": ["stylelint"]
+    "*.{css,scss,tsx}": [
+      "stylelint"
+    ]
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
@@ -65,10 +78,12 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
+    "eslint": "^4.19.1",
     "fetch-mock": "^6.4.2",
     "husky": "^0.14.3",
     "jest": "^22.4.4",
     "lint-staged": "^7.1.2",
+    "prettier": "^1.12.1",
     "react-test-renderer": "^16.3.2",
     "redux-mock-store": "^1.5.1",
     "stylelint": "^9.2.1",
@@ -77,6 +92,9 @@
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.3.1",
     "ts-jest": "^22.4.6",
+    "tslint-config-prettier": "^1.13.0",
+    "tslint-config-standard": "^7.0.0",
+    "tslint-plugin-prettier": "^1.3.0",
     "webpack-dev-server": "2.11.2"
   }
 }
