--- a/package.json
+++ b/package.json
@@ -2,18 +2,33 @@
   "name": "campfire",
   "private": true,
   "jest": {
-    "roots": ["<rootDir>/app/javascript/"],
+    "roots": [
+      "<rootDir>/app/javascript/"
+    ],
     "setupTestFrameworkScriptFile": "<rootDir>/app/javascript/__tests__/setup/setup_enzyme.ts",
-    "testPathIgnorePatterns": ["<rootDir>/app/javascript/__tests__/setup/"],
+    "testPathIgnorePatterns": [
+      "<rootDir>/app/javascript/__tests__/setup/"
+    ],
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     },
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
-    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"]
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   },
   "lint-staged": {
-    "*.{css,scss,tsx}": ["stylelint"],
-    "*.{ts,tsx}": ["tslint"]
+    "*.{css,scss,tsx}": [
+      "stylelint"
+    ],
+    "*.{ts,tsx}": [
+      "tslint"
+    ]
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
@@ -80,6 +95,7 @@
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.3.1",
     "ts-jest": "^22.4.6",
+    "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.13.0",
     "tslint-config-standard": "^7.0.0",
     "tslint-plugin-prettier": "^1.3.0",
